added texts to the announcement column

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           </div>
         </div>
       </div>
+
       <div class="main">
         <div class="header">
           <nav class="navbar">
@@ -84,12 +85,11 @@
                 alt=""
                 width="65px"
                 height="65px"
-                
                 class="ghost-buster-welcome"
               />
               <div class="welcome-text">
                 <p>Hi there,</p>
-                <h3>Domnicano Ciroma <span>(@ciroma)</span><h3>
+                <h3>Domnicano Ciroma <span>(@ciroma)</span></h3>
               </div>
             </div>
 
@@ -100,7 +100,149 @@
             </div>
           </div>
         </div>
-        <div class="content" style="background-color: red">Hello</div>
+
+        <div class="content">
+          <div class="project">
+            <h4 class="your-project">Your Projects</h4>
+            <div class="cards">
+              <div class="card-left">
+                <div class="card">
+                  <h4 class="hd">Super cool project</h4>
+                  <p>
+                    Lorem, ipsum dolor sitvoluptas eos. Cum, enim itaque! minus
+                    blanditiis.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+
+                <div class="card">
+                  <h4 class="hd">Impossible App</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusamus architecto provident quidem, ea voluptas,
+                    molestias iure.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+
+                <div class="card">
+                  <h4 class="hd">Add Blocker</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusamus ipsum nam, impedit quas sit architecto provident
+                    quidem, ea voluptas, molestias iure.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-right">
+                <div class="card">
+                  <h4 class="hd">Less Cool Project</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusamus ipsum nam, impedit quas sit architecto provident
+                    quidem, ea voluptas, molestias iure.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+
+                <div class="card">
+                  <h4>Money Maker App</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusamus ipsum nam, impedit quas sit architecto provident
+                    quidem, ea voluptas, molestias iure.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+
+                <div class="card">
+                  <h4 class="hd">Easy Peasy App</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Accusamus ipsum nam, impedit quas sit architecto provident
+                    quidem, ea voluptas, molestias iure.
+                  </p>
+                  <div class="icons">
+                    <img src="icons/star.svg" alt="" />
+                    <img src="icons/eye-plus-outline.svg" alt="" />
+                    <img src="icons/source-branch.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="announcement-trends">
+            <div class="ann">
+              <h4>Announcement</h4>
+              <div class="ann-card">
+                <div class="ann-text">
+                  <h6>Site Maintenance</h6>
+                  <p>
+                    Lorem ipsum dolor sit. Similique iure autem ut. Iste
+                    eligendi at accusantium?
+                  </p>
+                </div>
+                <div class="divider"></div>
+              </div>
+              <div class="ann-card">
+                <div class="ann-text">
+                  <h6>Community day share</h6>
+                  <p>
+                    Lorem ipsum dolor sit. Deserunt eveniet recusandae amet!
+                    Ullam itaque aut quaerat!
+                  </p>
+                </div>
+                <div class="divider"></div>
+              </div>
+
+              <div class="ann-card">
+                <div class="ann-text">
+                  <h6>Updated privacy policy</h6>
+                  <p>
+                    Lorem ipsum dolor sit. Optio saepe quas iure. Debitis
+                    accusamus eos quo!
+                  </p>
+                </div>
+                <div class="divider"></div>
+              </div>
+            </div>
+            <div class="trending">
+              <h4>Trending</h4>
+              <div class="trend-card">
+                <div class="trend-image-text">
+                  <img src="" alt="" />
+                  <div class="trend-text">
+                    <h6></h6>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
