--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           <nav class="navbar">
             <img src="icons/search.svg" alt="search" class="search" />
             <input type="text" class="search-input" />
-            <img src="icons/notifications-outline.svg" alt="bell" />
+            <img src="icons/bell-ringing.svg" alt="bell" />
 
             <img
-              src="icons/icons8-ghostbusters-48.png"
+              src="icons/new/avatar-svgrepo-com.svg"
               alt=""
               class="ghost-buster"
             />
@@ -81,7 +81,7 @@
           <div class="welcome">
             <div class="left">
               <img
-                src="icons/icons8-ghostbusters-48.png"
+                src="icons/new/avatar-svgrepo-com.svg"
                 alt=""
                 width="65px"
                 height="65px"
@@ -226,17 +226,40 @@
                     accusamus eos quo!
                   </p>
                 </div>
-                <div class="divider"></div>
               </div>
             </div>
             <div class="trending">
               <h4>Trending</h4>
               <div class="trend-card">
                 <div class="trend-image-text">
-                  <img src="" alt="" />
+                  <img src="icons/new/avatar-svgrepo-com (3).svg" alt="" />
                   <div class="trend-text">
-                    <h6></h6>
-                    <p></p>
+                    <h6>@Segun</h6>
+                    <p>Software Engineer</p>
+                  </div>
+                </div>
+                <div class="trend-image-text">
+                  <img src="icons/new/avatar-svgrepo-com (2).svg" alt="" />
+                  <div class="trend-text">
+                    <h6>@sam</h6>
+                    <p>Cloud Dev</p>
+                  </div>
+                </div>
+                <div class="trend-image-text">
+                  <img src="icons/new/avatar-svgrepo-com (1).svg" alt="" />
+                  <div class="trend-text">
+                    <h6>@Anita</h6>
+                    <p>IT Support</p>
+                  </div>
+                </div>
+                <div class="trend-image-text">
+                  <img
+                    src="icons/new/avatar-thinking-9-svgrepo-com.svg"
+                    alt=""
+                  />
+                  <div class="trend-text">
+                    <h6>@Nelly</h6>
+                    <p>Ui/Ux</p>
                   </div>
                 </div>
               </div>
